syntax = "proto3";

package common;

message baseResponse {
    bool isSuccess = 1;
    string errorMessage = 2;
}